[package]
name = "walkpwd"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
arboard = "3.6.0"
clap = { version = "4.5.41", features = ["derive"] }
copypasta = "0.10.2"
directories = "6.0.0"
dirs = "6.0.0"
passwords = "3.1.16"
pbkdf2 = "0.12.2"
rand = "0.9.2"
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10.9"
wl-clipboard-rs = "0.9.2"
zeroize = "1.8.1"
